<resources>
    <string name="app_name">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mobile_application_development">MOBILE APPLICATION DEVELOPMENT</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
</resources>