<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp5203140"
    tools:context=".fragments.RegistrationFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:text="@string/mobile_application_development"
        android:textAlignment="center"
        android:textColor="#4E4E4E"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="32dp"

            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="271dp"
                android:layout_height="63dp"
                android:hint="@string/username"
                android:textColorHint="#A7A7A7"
                app:errorEnabled="true"
                app:boxStrokeColor="#EAEAEE"
                app:boxStrokeErrorColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#5B5B5B"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="271dp"
                android:layout_height="63dp"
                android:layout_marginTop="6dp"
                android:hint="@string/password"
                android:textColorHint="#A7A7A7"
                app:boxStrokeColor="#EAEAEE"
                app:boxStrokeErrorColor="#FF0000"
                app:endIconMode="password_toggle"
                
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#5B5B5B"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_password_confirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="271dp"
                android:layout_height="63dp"
                android:layout_marginTop="6dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#A7A7A7"
                app:boxStrokeColor="#EAEAEE"
                app:errorEnabled="true"
                app:boxStrokeErrorColor="#FF0000"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#5B5B5B"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password must conyain one number one Uppercase letter"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/txt_password_confirm"
                app:layout_constraintTop_toBottomOf="@id/txt_password_confirm" />


            <Button
                android:id="@+id/sign_up"
                android:layout_width="271dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_password_confirm" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>